# procpp5e

./: README.md
code/c01_code/01B_Main_parameters/: CMakeLists.txt
code/c01_code/01C_Using_format/: .bash_init  CMakeLists.txt
code/c01_code/01D_Getting_input/: .bash_init  CMakeLists.txt
code/c01_code/01_HelloWorld/: .bash_init  CMakeLists.txt
code/c01_code/02_Namespaces/: CMakeLists.txt  usingnamespaces.cpp
code/c01_code/02_Namespaces/src/: main.cpp
code/c01_code/03_Variables/: 01_variables.cpp  02_numeric_limits.cpp  03_casting.cpp
code/c01_code/04_Operators/: operators.cpp
code/c01_code/05_Enumerations/: StronglyTypedEnums.cpp
code/c01_code/06_StructTest/: employee.cppm  structtest.cpp
code/c01_code/07_ConditionalStatementsAndOperator/: 01_if_else.cpp  02_fallthrough.cpp  03_ConditionalOperator.cpp
code/c01_code/08_SpaceshipOperator/: 01_SpaceshipOperator.cpp  02_NamedComparisonFunctions.cpp
code/c01_code/09_Functions/: functions.cpp
code/c01_code/10_Attributes/: 01_nodiscard.cpp  02_maybe_unused.cpp  03_noreturn.cpp  04_deprecated.cpp  05_likelihood.cpp
code/c01_code/11_array/: 01_c_array.cpp  02_std_array.cpp
code/c01_code/12_std_vector/: vector.cpp
code/c01_code/13_std_pair/: pair.cpp
code/c01_code/14_optional/: optional.cpp
code/c01_code/15_StructuredBindings/: StructuredBindings.cpp
code/c01_code/16_Loops/: loops.cpp
code/c01_code/17_InitializerLists/: InitializerLists.cpp
code/c01_code/18_StringTest/: string.cpp
code/c01_code/19_AirlineTicket/: AirlineTicket.cpp  AirlineTicket.cppm  AirlineTicketTest.cpp
code/c01_code/20_Scope/: Scope.cpp
code/c01_code/21_UniformInitialization/: 01_UniformInitialization.cpp  02_DesignatedInitializers.cpp
code/c01_code/22_Pointers/: 01_pointers.cpp  02_arrays.cpp  03_NullPointerConstant.cpp
code/c01_code/23_const/: const.cpp
code/c01_code/24_ConstPointerParam/: ConstPointerParam.cpp
code/c01_code/25_ConstAirlineTicket/: AirlineTicket.cpp  AirlineTicket.cppm
code/c01_code/26_constexpr/: 01_constexpr.cpp  02_constexprClasses.cpp
code/c01_code/27_consteval/: consteval.cpp
code/c01_code/28_References/: 01_ReferenceVariables.cpp  02_ReferenceDataMembers.cpp  04_ConstReferenceParameters.cpp  05_OddsEvensPtrs.cpp  06_OddsEvensRefs.cpp  07_OddsEvensVector.cpp  08_OddsEvensReturn.cpp
code/c01_code/29_const_cast/: const_cast.cpp
code/c01_code/30_Exceptions/: Exceptions.cpp
code/c01_code/31_TypeAliases/: TypeAliases.cpp
code/c01_code/32_TypeInference/: 01_TypeInference.cpp  02_copy_list_vs_direct_list.cpp
code/c01_code/33_EmployeeDB/: Database.cpp  Database.cppm  DatabaseTest.cpp  Employee.cpp  EmployeeTest.cpp  UserInterface.cpp
code/c02_code/01_CStrings/: 01_strcpy.cpp  02_strlen.cpp
code/c02_code/02_RawStringLiteral/: RawStringLiteral.cpp
code/c02_code/03_CppStrings/: CppStrings.cpp
code/c02_code/04_stoi/: stoi.cpp
code/c02_code/05_ToFromChars/: ToFromChars.cpp
code/c02_code/06_StringViews/: StringViews.cpp
code/c02_code/07_formatting/: 01_basic.cpp  02_examples.cpp  03_exceptions.cpp  04_custom_types.cpp
code/c07_code/01_ArrayDelete/: ArrayDelete.cpp
code/c07_code/02_tictactoe/: tictactoe.cpp
code/c07_code/03_CharacterBoard/: CharacterBoard.cpp
code/c07_code/04_ArraysAndPointers/: ArraysAndPointers.cpp
code/c07_code/05_Leaky/: Leaky MS VC++.cpp  (+1 more)
(+903 files in other folders)
